fix ul li layout issues

--- a/source/stylesheets/site.scss
+++ b/source/stylesheets/site.scss
@@ -65,6 +65,14 @@ ul:not(.navbar-nav), ol {
 	margin-bottom: 0;
 }
 
+ul ul {
+	margin-top: 0px !important;
+}
+
+li ul {
+	margin-top: 0px !important;
+}
+
 main img {
 	max-width: 1024px;
 	@include media-breakpoint-down(md) {
